[package]
name = "floppy"
version = "0.1.0"
authors = ["personinblack <berkay@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
chrono = "0.4"
regex = "1"
failure = "0.1.6"
lazy_static = "1.4.0"
